--- a/index.html
+++ b/index.html
@@ -38,6 +38,65 @@
     </div>
 </div>
 
+	
+ <section class="about" id="about">
+	
+        <div class="row">
+
+        <div class="col">
+		<h2><b>ABOUT US</b></h2>
+		<hr class="underline"><br>
+        <h3><b>Welcome to Church of God in Raleigh</b></h3><br>
+<p>At <b>Church of God in Raleigh </b>, we are a welcoming community dedicated to spiritual growth, fellowship, and service. Our ministries cater to individuals and families of all ages, offering opportunities to deepen your faith and connect with others. <br>
+We provide <b>Sunday School classes</b>,  led by passionate teachers who share the Word of God, along with dedicated ministries such as <b>Women’s Ministry, and Youth Ministry</b>, to support and encourage every member of our congregation.<br>
+You are not just a visitor here you are family. As you explore our website, we pray that the Holy Spirit uplifts you and fills your heart with peace and blessings.<br>
+We invite you to join us in worship, share your prayer requests, and experience the love and grace of God. We look forward to connecting with you soon! 
+
+</p>
+<br> <br>
+<a href="#" class="btn1">Connect with us</a>
+</div>
+			
+<div class="col"><img src="images/logo - Copy.svg" alt=""></div>			
+			
+</div>
+</section>	
+	
+	
+	
+	
+ <section class="meetings" id="meetings">	
+	<center><h2><b>CHURCH TIMINGS</b></h2>
+	<hr class="underline2"></center><br>
+	 
+	<div class="row"> <div class="col">
+   <center> <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Event</th>
+                    <th>Time</th>
+                </tr>
+            </thead>
+            <tbody id="tableBody"></tbody>
+        </table></div>
+   </center> </div> </div>
+
+	 
+	 
+	 
+	 
+</section>	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 <script>
     function toggleMenu() {
         const navLinks = document.querySelector('.nav-links');
@@ -68,7 +127,43 @@
     }
 
     setInterval(() => changeSlide(1), 3000); // Auto-slide every 3 seconds
-</script>
+
+	
+	
+	
+ const timings = [
+            { name: "Sunday School", time: "9:45 AM TO 10:30 AM" },
+            { name: "Sunday Worship", time: "10:30 AM TO 12:30 PM" },
+            { name: "Ladies Meeting", time: "2nd Saturday 10-11 AM" },
+            { name: "Intercessory Prayer", time: "Friday 7:00 PM TO 8:00 PM" },
+            { name: "Youth Meeting", time: "12:00 TO 1:00 PM Every Second Sunday" },
+            { name: "Fasting Prayer", time: "7:00 PM TO 8:00 PM Every First Friday & Saturday" }
+        ];
+
+        const tableBody = document.getElementById("tableBody");
+
+        timings.forEach(event => {
+            const row = document.createElement("tr");
+            row.innerHTML = `<td>${event.name}</td><td>${event.time}</td>`;
+            tableBody.appendChild(row);
+        });	
+	
+	
+	
+	
+	
+	
+	
+	
+	</script>
+	
+	
+	
+	
+	
+	
+	
+	
 
 </body>
 </html>
